# prak5

./: Fasta.cpp  Fasta.h  MIcomputation.cpp  MIcomputation.h  Matrix.h  SequenceSet.cpp  SequenceSet.h  fasta  oclMIcomputation.cl  oclutil.cpp  oclutil.h  outfilecomparer.py  pr5.cpp
amd/: CMakeLists.txt
intel/: CMakeLists.txt
nvidia/: CMakeLists.txt
